--- a/config/lean/x86/x86-lean-extra.config
+++ b/config/lean/x86/x86-lean-extra.config
@@ -11,7 +11,7 @@ CONFIG_PACKAGE_autocore-x86=y
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_ipv6helper=m
 
-# File System
+# File System文件
 CONFIG_PACKAGE_kmod-fs-f2fs=y
 CONFIG_PACKAGE_kmod-fs-nfs=y
 CONFIG_PACKAGE_kmod-fs-nfs-common=y
